MMA-8557 Endre qdist013 til å distribuerer via qdist015 (#343)
- Fjern sdist001, GCS og altinn integrasjon
- Fjern ubrukt konfig og properties